// 3D GIS Apartment Management System - ERD

Table buildings {
  id integer [pk, increment]
  name varchar [not null]
  address varchar [not null]
  ward varchar [note: 'Phường/Xã']
  district varchar [note: 'Quận/Huyện']
  city varchar [note: 'Thành phố/Tỉnh']
  location geometry(PointZ,4326) [not null, note: 'Tọa độ GIS 3D - PostGIS PointZ (x, y, z)']
  footprint geometry(PolygonZ,4326) [note: 'Footprint chi tiết của tòa nhà để hiển thị GIS 3D thay vì chỉ centroid']
  total_floors integer [not null]
  lod_level lod_level [not null, default: 'lod3', note: 'Mức độ chi tiết mô hình tòa nhà, phục vụ LoD2/LoD3']
  description text
  image_url varchar
  model_3d_url varchar [note: 'Đường dẫn mô hình 3D']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table floors {
  id integer [pk, increment]
  building_id integer [not null, ref: > buildings.id]
  floor_number integer [not null]
  elevation decimal [not null, default: 0, note: 'Cao độ sàn tầng trong không gian 3D']
  floor_plan geometry(PolygonZ,4326) [note: 'Mặt bằng hình học của tầng']
  model_3d_url varchar [note: 'Đường dẫn mô hình 3D riêng cho tầng nếu có']
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (building_id, floor_number) [unique]
  }
}

Table navigation_nodes {
  id integer [pk, increment]
  floor_id integer [not null, ref: > floors.id]
  node_type node_type [not null, note: 'Loại node: door, elevator, stairs, junction']
  label varchar [note: 'Nhãn mô tả node']
  location geometry(PointZ,4326) [not null, note: 'Tọa độ 3D - z xác định tầng']
  local_x decimal [note: 'Tọa độ X cục bộ trong hệ tọa độ tòa nhà']
  local_y decimal [note: 'Tọa độ Y cục bộ trong hệ tọa độ tòa nhà']
  local_z decimal [note: 'Tọa độ Z cục bộ trong hệ tọa độ tòa nhà']
  mesh_ref varchar [note: 'Tham chiếu mesh trong model 3D']
  metadata json [note: 'Thuộc tính mở rộng cho node']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table navigation_edges {
  id integer [pk, increment]
  start_node_id integer [not null, ref: > navigation_nodes.id]
  end_node_id integer [not null, ref: > navigation_nodes.id]
  edge_type edge_type [not null, default: 'hallway', note: 'Loại cạnh: hallway, stairs, elevator']
  distance decimal [not null, note: 'Khoảng cách (m) — trọng số cho Dijkstra/A*']
  travel_time decimal [note: 'Thời gian di chuyển (giây)']
  is_accessible boolean [not null, default: true, note: 'Có thể đi qua không (false khi hỏa hoạn, bảo trì)']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table apartments {
  id integer [pk, increment]
  floor_id integer [not null, ref: > floors.id]
  entry_node_id integer [ref: > navigation_nodes.id, note: 'Node cửa vào — terminal node trong mạng navigation']
  code varchar [not null, unique, note: 'Mã căn hộ']
  area decimal [not null, note: 'Diện tích (m2)']
  num_bedrooms integer
  num_bathrooms integer
  rental_price decimal [not null, note: 'Giá thuê (VND/tháng)']
  status apartment_status [not null, default: 'available', note: 'Trạng thái: available, rented, maintenance']
  indoor_model_url varchar [note: 'Đường dẫn mô hình không gian bên trong căn hộ']
  indoor_lod_level lod_level [default: 'lod4', note: 'LoD cho không gian trong căn hộ']
  description text
  created_by_id integer [ref: > users.id, note: 'Manager tạo']
  updated_by_id integer [ref: > users.id, note: 'Manager cập nhật']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Xóa mềm']
}

Table tenants {
  id integer [pk, increment]
  linked_user_id integer [ref: > users.id, note: 'Liên kết tùy chọn tới tài khoản đăng nhập nếu khách thuê có account']
  full_name varchar [not null]
  phone varchar [not null]
  email varchar
  id_card varchar [not null, unique, note: 'CCCD/CMND']
  address varchar [note: 'Địa chỉ thường trú']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Xóa mềm']

  indexes {
    (linked_user_id) [unique]
  }
}

Table apartment_access_grants {
  id integer [pk, increment]
  apartment_id integer [not null, ref: > apartments.id]
  user_id integer [not null, ref: > users.id]
  can_view_tenant boolean [not null, default: false, note: 'Xem thông tin tenant đầy đủ']
  can_view_contract boolean [not null, default: false, note: 'Xem chi tiết hợp đồng']
  expires_at timestamp [note: 'Hết hạn grant nếu có']
  granted_by_id integer [ref: > users.id, note: 'Manager cấp quyền']
  note text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (apartment_id, user_id) [unique]
  }
}

Table rental_contracts {
  id integer [pk, increment]
  apartment_id integer [not null, ref: > apartments.id]
  tenant_id integer [not null, ref: > tenants.id]
  start_date date [not null]
  end_date date [not null]
  monthly_rent decimal [not null, note: 'Giá thuê thực tế (VND/tháng)']
  deposit decimal [note: 'Tiền đặt cọc']
  status contract_status [not null, default: 'active', note: 'Trạng thái: active, expired, cancelled']
  note text
  created_by_id integer [ref: > users.id, note: 'Manager tạo']
  updated_by_id integer [ref: > users.id, note: 'Manager cập nhật']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Xóa mềm']
}

Table payments {
  id integer [pk, increment]
  contract_id integer [not null, ref: > rental_contracts.id]
  amount decimal [not null, note: 'Số tiền thanh toán (VND)']
  payment_date date [not null]
  status payment_status [not null, default: 'paid', note: 'Trạng thái thanh toán']
  note text
  created_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Xóa mềm']
}

Table apartment_status_history {
  id integer [pk, increment]
  apartment_id integer [not null, ref: > apartments.id]
  status apartment_status [not null]
  changed_by_id integer [ref: > users.id, note: 'Manager thay đổi']
  changed_at timestamp [not null, default: `now()`]
  note text
}

Table users {
  id integer [pk, increment]
  username varchar [not null, unique]
  password varchar [not null]
  full_name varchar [not null]
  email varchar [unique]
  role user_role [not null, default: 'user', note: 'Vai trò: user, manager']
  is_active boolean [not null, default: true, note: 'Trạng thái kích hoạt']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Xóa mềm']
}

Table auth_sessions {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  refresh_token_hash varchar [not null, unique, note: 'Hash của refresh token, dùng cho rotation/revoke']
  expires_at timestamp [not null, note: 'Thời điểm hết hạn của refresh token']
  revoked_at timestamp [note: 'Thời điểm thu hồi token (logout, security event)']
  last_used_at timestamp [note: 'Lần cuối token được sử dụng để rotate']
  user_agent text [note: 'User agent của thiết bị đăng nhập']
  ip_address varchar [note: 'Địa chỉ IP của thiết bị đăng nhập']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table apartment_spaces {
  id integer [pk, increment]
  apartment_id integer [not null, ref: > apartments.id]
  parent_space_id integer [ref: > apartment_spaces.id, note: 'Cho phép mô hình hóa phân cấp: căn hộ -> phòng -> zone']
  name varchar [not null, note: 'Tên không gian, ví dụ: Phòng khách']
  space_type indoor_space_type [not null, default: 'room', note: 'Loại không gian: unit, room, zone']
  room_type room_type [note: 'Ngữ nghĩa phòng']
  lod_level lod_level [not null, default: 'lod4', note: 'Không gian nội thất dùng LoD4']
  boundary geometry(PolygonZ,4326) [note: 'Ranh giới 3D của không gian phục vụ kiểm tra đặt nội thất']
  model_3d_url varchar [note: 'Mô hình 3D của không gian/phòng nếu có']
  metadata json [note: 'Thuộc tính mở rộng như vật liệu, chiều cao trần, vùng cấm']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (apartment_id, name) [unique]
  }
}

Table furniture_catalog {
  id integer [pk, increment]
  code varchar [not null, unique, note: 'Mã đồ nội thất trong thư viện']
  name varchar [not null]
  category furniture_category [not null, default: 'other']
  model_3d_url varchar [not null, note: 'Mô hình 3D để render khi kéo/thả']
  default_width decimal [note: 'Chiều rộng mặc định']
  default_depth decimal [note: 'Chiều sâu mặc định']
  default_height decimal [note: 'Chiều cao mặc định']
  metadata json [note: 'Thuộc tính mở rộng, ví dụ material, anchor rules']
  is_active boolean [not null, default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table furniture_layouts {
  id integer [pk, increment]
  apartment_id integer [not null, ref: > apartments.id]
  name varchar [not null, note: 'Tên layout nội thất']
  status furniture_layout_status [not null, default: 'draft']
  version integer [not null, default: 1]
  created_by_id integer [ref: > users.id]
  updated_by_id integer [ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table furniture_items {
  id integer [pk, increment]
  layout_id integer [not null, ref: > furniture_layouts.id]
  space_id integer [ref: > apartment_spaces.id, note: 'Không gian/phòng chứa item']
  catalog_id integer [not null, ref: > furniture_catalog.id]
  label varchar [note: 'Tên gợi nhớ của item trong layout']
  position geometry(PointZ,4326) [not null, note: 'Tọa độ đặt nội thất (x, y, z)']
  rotation_x decimal [not null, default: 0, note: 'Góc xoay theo trục X']
  rotation_y decimal [not null, default: 0, note: 'Góc xoay theo trục Y']
  rotation_z decimal [not null, default: 0, note: 'Góc xoay theo trục Z']
  scale_x decimal [not null, default: 1, note: 'Tỉ lệ theo trục X']
  scale_y decimal [not null, default: 1, note: 'Tỉ lệ theo trục Y']
  scale_z decimal [not null, default: 1, note: 'Tỉ lệ theo trục Z']
  is_locked boolean [not null, default: false, note: 'Khóa item để tránh chỉnh sửa ngoài ý muốn']
  metadata json [note: 'Thuộc tính mở rộng, ví dụ trạng thái va chạm, anchor, preset']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Enum apartment_status {
  available [note: 'Còn trống']
  rented [note: 'Đã thuê']
  maintenance [note: 'Đang bảo trì']
}

Enum contract_status {
  active [note: 'Đang hiệu lực']
  expired [note: 'Hết hạn']
  cancelled [note: 'Đã hủy']
}

Enum payment_status {
  pending [note: 'Chờ thanh toán']
  paid [note: 'Đã thanh toán']
  overdue [note: 'Quá hạn']
}

Enum user_role {
  user [note: 'Người dùng thông thường']
  manager [note: 'Quản lý']
}

Enum lod_level {
  lod2 [note: 'Mô hình khối cơ bản']
  lod3 [note: 'Mô hình kiến trúc chi tiết bên ngoài']
  lod4 [note: 'Mô hình không gian bên trong và nội thất']
}

Enum indoor_space_type {
  unit [note: 'Toàn bộ căn hộ']
  room [note: 'Phòng chức năng']
  zone [note: 'Vùng con trong phòng, ví dụ khu bếp hoặc lối đi']
}

Enum room_type {
  living_room [note: 'Phòng khách']
  bedroom [note: 'Phòng ngủ']
  kitchen [note: 'Bếp']
  bathroom [note: 'Phòng tắm/WC']
  balcony [note: 'Ban công']
  corridor [note: 'Hành lang/lối đi']
  storage [note: 'Kho']
  other [note: 'Không gian khác']
}

Enum furniture_category {
  sofa [note: 'Sofa']
  table [note: 'Bàn']
  chair [note: 'Ghế']
  bed [note: 'Giường']
  cabinet [note: 'Tủ/Kệ']
  appliance [note: 'Thiết bị']
  decor [note: 'Trang trí']
  other [note: 'Khác']
}

Enum furniture_layout_status {
  draft [note: 'Bản nháp']
  published [note: 'Đã công bố']
  archived [note: 'Lưu trữ']
}

Enum node_type {
  door [note: 'Cửa căn hộ']
  elevator [note: 'Thang máy']
  stairs [note: 'Cầu thang']
  junction [note: 'Sảnh/điểm giao cắt']
}

Enum edge_type {
  hallway [note: 'Hành lang']
  stairs [note: 'Cầu thang liên tầng']
  elevator [note: 'Thang máy liên tầng']
}
